# python-compiler

./: .gitignore  CMakeLists.txt  README.md  compile_ll.cpp  debug_log.txt  debug_output.txt  example.ll  example_bin  example_binary  main  print.c  python_code_gui.ll  python_code_gui.ll.s  python_code_gui.s  test.py
docs/: NOTES
docs/examples/front/lexer/: Tag.java
docs/lexical-analysis/: regexp1.html
docs/lexical-analysis/swtch.com/: plan9history
docs/lexical-analysis/swtch.com/spin/: index.html  sleep_wakeup.txt  sleep_wakeup2.txt  sleep_wakeup2c.txt
docs/lexical-analysis/swtch.com/~rsc/: index.html
docs/lexical-analysis/swtch.com/~rsc/papers/: index.html
docs/lexical-analysis/swtch.com/~rsc/papers/fndn/: index.html
docs/lexical-analysis/swtch.com/~rsc/papers/vx32/: index.html
docs/lexical-analysis/swtch.com/~rsc/regexp/: ibm7094.html  index.html  regexp2.html  regexp3.html  regexp4.html
docs/lexical-analysis/swtch.com/~rsc/talks/: backup-spain.ppt  index.html  sec-spain.ppt
docs/lexical-analysis/swtch.com/~rsc/talks/acid07/: index.html
docs/lexical-analysis/swtch.com/~rsc/talks/acid07/Slidy/: slidy.js
docs/lexical-analysis/swtch.com/~rsc/talks/threads07/: index.html
docs/lexical-analysis/swtch.com/~rsc/talks/threads07/Slidy/: w3c-blue2.css
docs/lexical-analysis/swtch.com/~rsc/thread/: index.html
docs/lexical-analysis/swtch.com/~rsc/vivaldi/: grid-motion-3.mpg  grid2-motion-2.mpg  talk.html
docs/lexical-analysis/swtch.com/~rsc/worknotes/: index.html
docs/syscalls/: syscalls.html
example/: CMakeLists.txt  Makefile  example.py  example2.py  example3.py  example4.py  example_error.py  example_lexer.cpp  gui_app.cpp  main.cpp  parser.cpp
example/asm/: hello_world.asm
src/: *Python*  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  app.cpp  ast.cpp  ast.hpp  cli.cpp  codegen.cpp  codegen.hpp  error.cpp  error.hpp  example3.py  gui.cpp  gui.hpp  ident.cpp  ident.hpp  integer.cpp  integer.hpp  lexer.cpp  lexer.hpp  lexer_error.cpp  lexer_error.hpp  parser.cpp  parser.hpp  real.cpp  real.hpp  semantic.cpp  semantic.hpp  tag.cpp  tag.hpp  token.cpp  token.hpp  word.cpp  word.hpp
